Closed Bug 39737 Opened 25 years ago Closed 25 years ago

infinite loop while charset conversion

Categories

(MailNews Core :: Backend, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: nhottanscp, Assigned: nhottanscp)

Details

(Keywords: verifyme, Whiteboard: [nsbeta2+][6/01])

Attachments

(1 file)

This is discovered by Rich but has no reproducible procedure. But this should happen whenever it gets corrupted data (e.g. charset mislabeled messages). Quoting from the mail, > I have a problem with the nsMsgI18NConvertToUnicode() routine getting > stuck in an infinite loop. The problem looks like: > > res = encoder->Convert(currentSrcPtr, &srcLength, localbuf, > &dstLength); > > Is returning ZERO as the dstLength, but the res is set to > NS_OK_UDEC_MOREINPUT so you never get out of the loop.
Attached patch patchSplinter Review
Put nsbeta2 to keyword. This is a safe fix (added an extra condition to break the loop), r=rhp.
Status: NEW → ASSIGNED
Keywords: nsbeta2
Target Milestone: --- → M16
Putting on [nsbeta2+][6/01] radar. This work must be done by 06/01 or we may pull this for PR2.
Whiteboard: [nsbeta2+][6/01]
checked in the patch
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I can't verify this. adding verifyme keyword
Keywords: verifyme
verified
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: