Additional break condition to prevent infinite loop, r=rhp, a=waterson, bug 39737.